# ConvSim

./: .gitignore  CMakeLists.txt  README.md
data/: connections.txt  connections_test1.txt  connections_test1.xml  conveyors_test1.txt  kr2.txt  przenosniki.txt  tanks_test1.txt  zbiorniki.txt
engine/: atomic.h  event.h  eventlistener.cpp  eventlistener.h  model.h  network.h  resultant.cpp  resultant.h  simulator.cpp  simulator.h
gui/: gui.pro
plot/: hist1.plt  kr1.plt  sim1.plt  sim2.plt
projekt/: MAIN.txt  kr.txt  kr1.txt  kr3.txt  main.cpp  przenosniki.txt  wagi.txt  zapis.txt
src/: atomic.cpp  atomic.h  connection.h  conveyor.cpp  conveyor.h  eventlistener.cpp  eventlistener.h  io_type.h  loadinggrid.cpp  loadinggrid.h  main.cpp  network.h  resultant.h  simulator.cpp  simulator.h  tank.cpp  tank.h  transportationsystem.cpp  transportationsystem.h  utils.h  weighingbelt.cpp  weighingbelt.h
test/: simulator_test.cpp  transportationsystem_test.cpp
